# multi-agent-demo

./: .gitignore  DIRECTORY_MAP.md  README.md  local-config-scripted.yaml  local-config.yaml  pyproject.toml
src/mafia/: __init__.py  agent.py  bus.py  cli.py  command_router.py  compose_compat.py  config.py  context.py  engine.py  event_log.py  mafia_controller.py  mafia_personas.py  messages.py  policies.py  projections.py  runtime_support.py  scripted_logic.py  service.py  transport.py  web_pages.py  workers.py
src/mafia/runtimes/: __init__.py  claude.py  codex.py  scripted.py
src/mafia/static/: react-app.css  react-app.js
tests/: conftest.py  test_engine.py  test_runtimes.py  test_service.py
